--- a/js/Asynchronous/Sequencing_animation/index.html
+++ b/js/Asynchronous/Sequencing_animation/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sequencing animations</title>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js" defer></script>
 	<link rel="stylesheet" href="style.css">
 </head>
 
